# pyMarketV2

./: .gitignore  README.md  git_init.bat  main.py
python_frontend/: client.py  gui.py  main.py  requirements.txt
rust_backend/: Cargo.toml
rust_backend/src/: bot.rs  finance.rs  main.rs  protocol.rs  server.rs  trader.rs  utils.rs
参考/pyMarket/: bot.py  example0.py  example1.py  finance.py  global_lock.py  gui.py  requirements.txt  trader.py  utils.py
