[package]
name = "pymarket_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
